[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyquest-engine"
version = "0.2.0"
authors = [
  { name="Sahar Lando", email="saharlan500@gmail.com" },
]
description = "Powerful and flexible text game engine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment :: Role-Playing"
]

[project.urls]
"Homepage" = "https://github.com/saharking1298/PyQuest"
"Bug Tracker" = "https://github.com/saharking1298/PyQuest/issues"
